--- a/react_app/src/components/CardItem.scss
+++ b/react_app/src/components/CardItem.scss
@@ -5,8 +5,7 @@
   cursor: pointer;
   transform-style: preserve-3d;
   transform-origin: center right;
-  transition: transform .75s;
-  background-color: rgba(203, 148, 214, 0.475);
+  transition: transform 1s;
 }
 
 .back {
@@ -20,7 +19,6 @@
   width: 100%;
   height: 100%;
   line-height: 260px;
-  color: rgb(10, 10, 10);
   text-align: center;
   font-weight: bold;
   font-size: 40px;
